add locations table

--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ES6</title>
 </head>
+
 <body>
     <h1>ES6</h1>
     <div id="map" style="width: 100%; height: 400px;"></div>
     <button class="btn">Click Me</button>
-    
+
+    <section class="locations-container">
+        <table class="locations-table">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Lat</th>
+                    <th>Lng</th>
+                    <th>Weather</th>
+                    <th>CreatedAt</th>
+                    <th>UpdatedAt</th>
+                </tr>
+            </thead>
+            <tbody class="locations-list">
+
+            </tbody>
+        </table>
+        <!-- <div class="locations-list">
+
+        </div> -->
+    </section>
+
     <script type="module" src="js/main.js"></script>
 </body>
+
 </html>
