--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ES6</title>
+    <link rel="stylesheet" href="css/css-main.css">
+
+    <title>ES6 - TravelTip</title>
 </head>
 
 <body>
     <h1>ES6</h1>
-    <div id="map" style="width: 100%; height: 400px;"></div>
+    <div class="map" id="map" style="width: 30rem; height: 25rem;"></div>
     <button class="btn">Click Me</button>
+
+    <section class="search-cont">
+        <input autofocus class="search" type="search" placeholder="Enter Location">
+        <button class="go">Go!</button>
+        <button class="myLoc">My Location</button>
+        <button class="copyLoc">Copy Location</button>
+    </section>
+</section>
+</section>
+        <h2></h2>
+        </div>
+    </section>
+
 
     <section class="locations-container">
         <table class="locations-table">
@@ -30,10 +45,13 @@
             </tbody>
         </table>
         <!-- <div class="locations-list">
+                <h2></h2>
 
         </div> -->
     </section>
 
+    <script src="lib/jquery.js"></script>
+    <script src="lib/axios.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
 
