--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-    <h1>ES6</h1>
-    <div class="map" id="map" style="width: 30rem; height: 25rem;"></div>
-    <button class="btn">Click Me</button>
-
-    <section class="search-cont">
+    <h1>ES6 TravelTip -by Mina & Ido </h1>
+    <section class="search-cont" >
         <input autofocus class="search" type="search" placeholder="Enter Location">
         <button class="go">Go!</button>
         <button class="myLoc">My Location</button>
@@ -25,6 +22,10 @@
         <h2></h2>
         </div>
     </section>
+
+
+    <div class="map" id="map" style="width: 30rem; height: 25rem;"></div>
+    <button class="btn">Click Me</button>
 
 
     <section class="locations-container">
