--- a/index.html
+++ b/index.html
@@ -10,23 +10,17 @@
 </head>
 
 <body>
-    <h1>ES6 TravelTip -by Mina & Ido </h1>
+    <h1>ES6 TravelTip - by Mina & Ido</h1>
     <section class="search-cont" >
         <input autofocus class="search" type="search" placeholder="Enter Location">
         <button class="go">Go!</button>
         <button class="myLoc">My Location</button>
         <button class="copyLoc">Copy Location</button>
     </section>
-</section>
-</section>
         <h2></h2>
-        </div>
-    </section>
-
-
-    <div class="map" id="map" style="width: 30rem; height: 25rem;"></div>
-    <button class="btn">Click Me</button>
-
+       
+<section id="map" class="map-container video-container"></section>
+    <!-- <button class="btn">Click Me</button> -->
 
     <section class="locations-container">
         <table class="locations-table">
