--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
             </tbody>
         </table>
-        <!-- <div class="locations-list">
-                <h2></h2>
-
-        </div> -->
+        <section class="weather-details-container">
+            <h1 class="current-temp"></h1>
+            <h2 class="weather-description"></h2>
+        </section>
     </section>
 
     <script src="lib/jquery.js"></script>
