trying and failing to catch map click event

--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
 </head>
 
 <body>
+    <!-- <div class="screen"></div> -->
+    <!-- <div class="modal"></div> -->
+
     <h1>ES6 TravelTip -by Mina & Ido </h1>
-    <section class="search-cont" >
+    <section class="search-cont">
         <input autofocus class="search" type="search" placeholder="Enter Location">
         <button class="go">Go!</button>
         <button class="myLoc">My Location</button>
         <button class="copyLoc">Copy Location</button>
     </section>
-</section>
-</section>
-        <h2></h2>
-        </div>
+    </section>
+    </section>
+    <h2></h2>
+    </div>
     </section>
 
 
